x-pack/plugins/ml/public/application/components/data_grid/column_chart.scss
.mlDataGridChart__histogram {
  width: 100%;
  height: $euiSizeXL + $euiSizeXXL;
}

.mlDataGridChart__legend {
  color: $euiColorMediumShade;
  display: block;
  overflow-x: hidden;
  margin: $euiSizeXS 0px 0px 0px;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 0.75rem;
  font-style: italic;
  font-weight: normal;
  line-height: 1.4;
  text-align: left;
}

.mlDataGridChart__legend--numeric {
  text-align: right;
}

.mlDataGridChart__legendBoolean {
  width: 100%;
  td { text-align: center }
}

